tests/ui/transmute-mut-src-immutable.msrv.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-mut-src-immutable.rs:15:37
   |
15 |     let _: &mut u8 = transmute_mut!(&0u8);
   |                      ---------------^^^^-
   |                      |              |
   |                      |              types differ in mutability
   |                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                      found reference `&u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
